# lifxlan

./: .gitignore  DOMOTICANE.py  LICENSE.md  MANIFEST  MANIFEST.in  README.md  __init__.py  device.py  foco1.py  lifxlan.py  light.py  message.py  netifaces-0.10.9-cp37-cp37m-win_amd64.whl  pyproject.toml  requirements.txt  sandbox.py  setup.py  unpack.py
advent/: day13.py  day14.py
bitstring-3.1.7/: LICENSE  PKG-INFO  README.rst  release_notes.txt  setup.py
examples/: blink.py  blink_all.py  breathe.py  breathe_all.py  broadcast_color.py  broadcast_off.py  broadcast_on.py  gen_prodmap.py  get_color.py  get_color_all.py  get_switch_buttons.py  hello_world.py  mqtt.py  multizone.py  multizone_breathe.py  multizone_chase.py  multizone_shimmer.py  rainbow.py  rainbow_all.py  set_color_all.py  sniffer.py  tilechain_coals.py  tilechain_dots.py  tilechain_falling_rainbow.py  tilechain_invaders.py  tilechain_shimmering_leaves.py  tilechain_webhit_counter.py  verbose_lan.py
ifaddr-0.1.7/: PKG-INFO  README.rst  setup.cfg  setup.py
lifxlan/: __init__.py  base_api.py  colors.py  device.py  errors.py  generate_products_file.py  grid.py  group.orig.py  group.py  group.py.orig  group2.py  lifxlan.orig.py  lifxlan.py  lifxlan_mod.py  light.py  light2.py  message.py  msgtypes.py  multizonelight.py  network.py  products.json  products.py  settings.py  switch.py  themes.py  tilechain.py  unpack.py  utils.py
lifxlan3/: __init__.py  base_api.py  colors.py  grid.py  group.py  settings.py  themes.py  utils.py
netifaces-0.10.9/: README.rst  netifaces.c  setup.cfg  setup.py
(+100 files in other folders)
